# metrics-lib

./: AverageMetric.cpp  AverageMetric.h  CMakeLists.txt  CounterMetric.cpp  IMetric.h  MetricsRegistry.cpp  MetricsRegistry.h  MetricsWriter.cpp  README.md  main.cpp
app/: main.cpp
include/: AverageMetric.h  CounterMetric.h  MetricsRegistry.h  MetricsWriter.h
src/: AverageMetric.cpp  CounterMetric.cpp  MetricsRegistry.cpp  MetricsWriter.cpp
